@@ -7,6 +7,49 @@ interface with galaxy.
 In this section, we will discuss how one could use galaxy to provide
 simple but functional interfaces to omero/VL functionalities.
 
+Writing a tool description
+--------------------------
+
+Input selection
+...............
+
+In the current galaxy implementation, it is possible to parametrize
+somewhat the generation of options list for param of type select.  In
+this first example, the list of available values is contained in a
+file.
+
+.. code-block:: xml
+ 
+      <param name="maker" type="select" 
+      label="Select the desidered markers set maker.">
+        <options from_file="icrobial_data.loc" startswith="ORG">
+          <column name="name" index="3"/>
+          <column name="value" index="3"/>
+          <filter type="unique_value" name="unique" column="3"/>
+        </options>
+      </param>
+
+
+In the followi
+
+.. code-block:: xml
+
+    <param name="study" type="select" label="Context study" 
+	   help="Choose from the already defined studies. See help below.">    
+      <options from_parameter="tool.app.known_studies" 
+	       transform_lines="[ &quot;%s%s%s:%s&quot; 
+                                  % ( l[0], self.separator, l[0], l[1][:40] ) 
+                                  for l in obj ]">
+        <column name="value" index="0"/>
+        <column name="name" index="1"/>
+        <filter type="sort_by" column="0"/>
+        <filter type="add_value" name="Records provide study labels" 
+                value="use_provided" index="0"/>
+      </options>
+    </param>
+
+
+
 Templating options
 ------------------
 
@@ -147,4 +190,4 @@ Templating options
 	   help="Selecting no tables will result in using all tables." 
 	   from_file="annotation_profiler_options.xml"/>
 
-.. code-block:: xml
+
