@@ -1,7 +1,7 @@
 <tool id="vl_import_data_collection" name="VLI.data_collection">
   <description>import DataCollection definitions within omero/vl</description>
   <command interpreter="python">
-    data_collection.py
+    importer.py
     #if $advanced_configuration.configuration_level == 'advanced'
       --host=$advanced_configuration.vl_host
       --user=$advanced_configuration.vl_user
