@@ -1,7 +1,7 @@
 <tool id="vl_import_data_object" name="VLI.data_object">
   <description>import DataObject definitions within omero/vl</description>
   <command interpreter="python">
-    data_object.py
+    importer.py
     #if $advanced_configuration.configuration_level == 'advanced'
       --host=$advanced_configuration.vl_host
       --user=$advanced_configuration.vl_user
