@@ -1,7 +1,7 @@
 <tool id="vl_import_data_sample" name="VLI.data_sample">
   <description>import DataSample definitions within omero/vl</description>
   <command interpreter="python">
-    data_sample.py
+    importer.py
     #if $advanced_configuration.configuration_level == 'advanced'
       --host=$advanced_configuration.vl_host
       --user=$advanced_configuration.vl_user
