@@ -1,7 +1,7 @@
 <tool id="vl_import_diagnosis" name="VLI.diagnosis">
   <description>import diagnosis data within omero/vl</description>
   <command interpreter="python">
-    diagnosis.py
+    importer.py
     #if $advanced_configuration.configuration_level == 'advanced'
       --host=$advanced_configuration.vl_host
       --user=$advanced_configuration.vl_user
