@@ -1,7 +1,7 @@
 <tool id="vl_import_individual" name="VLI.individual">
   <description>import individual definitions within omero/vl</description>
   <command interpreter="python">
-    individual.py
+    importer.py
     #if $advanced_configuration.configuration_level == 'advanced'
       --host=$advanced_configuration.vl_host
       --user=$advanced_configuration.vl_user
