@@ -1,5 +1,0 @@
-import sys
-from bl.vl.app.importer.main import main
-
-args = sys.argv[1:]
-main(args)
